regression_tests/snap/check/testpb2/testpb2.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.10-a339290

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 24 2018 08:40:44

================================================================================
                     Run at 26-JUN-2018 10:27:12 by ccrook


The command file testpb2.snp contains:
     title Regression test 1 - data types and observation equations
     
     coordinate_file testpb2.crd
     data_file testpb1.dat
     
     mode 3d adjustment
     convergence_tolerance 0.001
     
     fix all
     
     list command_file
     list file_summary
     list observation_equations
     list station_coordinates
     list residuals
     




================================================================================
Regression test 1 - data types and observation equations    26-JUN-2018 10:27:12

                             SUMMARY OF INPUT FILES

================================================================================


Program options read from testpb2.snp

Job: Regression test 1 - data types and observation equations


Solution type: 3d coordinate adjustment


Coordinates file testpb2.crd
       5 stations read

Data file 1: testpb1.dat
   *** 2 errors reading the file



================================================================================
Regression test 1 - data types and observation equations    26-JUN-2018 10:27:12

                                     ERRORS

================================================================================

Note: 3 errors reported in testpb2.err
